--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/myEnvironment.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/myEnvironment.scss
@@ -2,6 +2,10 @@
     display: flex;
     flex-direction: column;
 
+    .communities__list {
+        margin-bottom: 95px;
+    }
+
     &__menu {
         li {
             display: flex;
