--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/discussion.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/discussion.scss
@@ -1,3 +1,5 @@
+$mobile-max-width: 425px;
+
 .discussion {
     display: flex;
     flex-direction: column;
@@ -45,14 +47,12 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
-        right: 25%;
-        top: 5%;
+        right: 25vw;
+        top: 10vh;
         padding: 15px;
         border-radius: 20px;
-        width: 800px;
-        max-height: 90%;
+        width: 50vw;
         z-index: 10;
-        overflow-y: auto;
 
         .title {
             display: flex;
@@ -270,3 +270,24 @@
         font-size: 12px;
     }
 }
+
+
+@media (max-width: $mobile-max-width) {
+    .discussion {
+        &__selected-discussion, &__create {
+            position: fixed;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            right: 1vw;
+            top: 10vh;
+            padding: 15px;
+            border-radius: 20px;
+            box-shadow: none !important;
+            border: 2px solid gray;
+            width: 98%;
+            z-index: 10;
+        }
+    }
+}
+
