--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/members.scss
@@ -1,3 +1,5 @@
+$mobile-max-width: 425px;
+
 .people-inspection {
     &__popup {
         position: fixed;
@@ -7,11 +9,10 @@
         align-items: center;
         gap: 20px;
         border-radius: 25px;
-        right: 35%;
-        top: 10%;
+        right: 35vw;
+        top: 15vh;
         padding: 15px 10px;
-        width: 350px;
-        max-height: 600px;
+        width: 30vw;
 
         .search {
             display: flex;
@@ -26,7 +27,7 @@
         justify-content: center;
         align-items: center;
         gap: 20px;
-        width: 300px;
+        width: 100%;
         overflow-y: hidden;
         max-height: 350px;
     }
@@ -87,7 +88,6 @@
         flex-direction: column;
         gap: 10px;
         margin-top: -15px;
-        width: 250px;
         padding: 5px;
         overflow-y: auto;
 
@@ -101,6 +101,18 @@
                     box-shadow: 1px 1px 1px 1px gray;
                 }
             }
+        }
+    }
+}
+
+@media (max-width: $mobile-max-width)  {
+    .people-inspection {
+        &__popup {
+            box-shadow: none !important;
+            border: 2px solid gray;
+            border-radius: 20px;
+            right: 3vw;
+            width: 95%;
         }
     }
 }
