--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/selectedUser.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/selectedUser.scss
@@ -4,24 +4,30 @@
 
     &__container {
         display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 5vw;
+        width: 100%;
 
+        .menu-container {
+            display: flex;
+            justify-content: center;
+        }
     }
 
     &__content {
         display: flex;
         align-items: center;
-        margin-left: 25px;
+        justify-content: center;
     }
 
     &__menu {
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        padding: 10px;
+        padding: 5px;
         box-shadow: 2px 2px 2px 2px gray;
         border-radius: 15px;
-        gap: 20px;
-        height: 315px;
+        gap: 25px;
 
         .sub-menu {
             display: flex;
