--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -72,6 +72,13 @@
             }
         }
 
+        .chat-user-information {
+            position: absolute;
+            right: 3vw;
+            top: 5vh;
+            z-index: 100;
+        }
+
         .message-title {
             display: flex;
             align-items: center;
