--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/people.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/people.scss
@@ -7,6 +7,18 @@
         gap: 25px;
         margin-top: 10px;
 
+        .person {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+
+            .people-user-information {
+                position: fixed;
+                z-index: 100;
+                margin-top: 50px;
+            }
+        }
+
         .card {
             width: 250px;
 
