--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
@@ -1,16 +1,11 @@
 .user-information {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    margin-top: 35px;
-    z-index: 10;
-
     .alert-success, .alert-warning {
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 20px;
         margin: 5px;
+
 
         p {
             font-weight: bold;
@@ -21,11 +16,13 @@
     }
 
     &__container {
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         border-radius: 20px;
         width: 350px;
+        z-index: 999;
 
         .details {
             display: flex;
