--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
@@ -1,20 +1,23 @@
-﻿.general-details {
+﻿$mobile-max-width: 425px;
+
+.general-details {
     &__container {
         display: flex;
         flex-direction: column;
         gap: 20px;
 
         .card {
-            width: 75%;
+            width: 100%;
             box-shadow: 10px 10px #3AA6B9;
-            margin: 25px;
+            margin: 25px 5px;
             background: #135D66;
 
             .list-group {
                 display: flex;
                 flex-direction: row;
-                justify-content: center;
+                justify-content: space-around;
                 gap: 40px;
+                flex-wrap: wrap;
             }
 
             .list-group-item {
@@ -22,10 +25,11 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
-                gap: 10px;
+                gap: 5px;
                 background: #135D66;
-                font-size: 14px;
+                font-size: 0.8em;
                 color: white;
+                padding: 5px;
 
                 div {
                     display: flex;
@@ -151,6 +155,15 @@
         .recharts-responsive-container {
             margin: 25px 0;
             font-size: 12px;
+        }
+    }
+}
+
+@media (max-width: $mobile-max-width)  {
+    .general-details {
+        &__navigate {
+            flex-direction: column;
+            align-items: center;
         }
     }
 }
