--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/dashboard.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/dashboard.scss
@@ -30,6 +30,7 @@ $mobile-max-width: 425px;
             @include flex-center;
             gap: 20px;
             margin: 0;
+            flex-wrap: wrap;
 
             li {
                 @include flex-center;
