--- a/src/Identity/CombatAnalysisIdentity/wwwroot/css/site.css
+++ b/src/Identity/CombatAnalysisIdentity/wwwroot/css/site.css
@@ -2,13 +2,22 @@ body {
   color: white;
 }
 
+.container {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+}
+
+main {
+  padding: 10px;
+}
+
 #root {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  top: 0;
   background: #0c192c;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   z-index: -1;
 }
 
@@ -45,13 +54,11 @@ input, label {
   }
 }
 .login, .registration {
-  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  right: 40%;
-  top: 20%;
+  width: 98vw;
 }
 .login input[type=email], .login input[type=text], .login input[type=password], .login input[type=number], .login input[type=submit], .login input[type=date], .login textarea, .registration input[type=email], .registration input[type=text], .registration input[type=password], .registration input[type=number], .registration input[type=submit], .registration input[type=date], .registration textarea {
   width: 300px;
@@ -82,9 +89,6 @@ input, label {
   box-shadow: 2px 2px 2px 2px gray;
 }
 
-.login {
-  right: 40%;
-}
 .login__title {
   font-size: 18px;
   font-weight: bold;
@@ -118,11 +122,7 @@ input, label {
   justify-content: center;
 }
 
-.registration {
-  right: 20%;
-}
 .registration__title {
-  margin-left: 50px;
   font-size: 18px;
   font-weight: bold;
 }
@@ -130,7 +130,7 @@ input, label {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 1000px;
+  width: 100%;
 }
 .registration__submit .confidential, .registration__submit .general {
   display: flex;
@@ -161,6 +161,7 @@ input, label {
   display: flex;
   justify-content: center;
   gap: 50px;
+  flex-wrap: wrap;
 }
 
 .btn-border-shadow {
