--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
@@ -6,26 +6,51 @@
         flex-direction: column;
         gap: 20px;
 
+        .details__container {
+            ul {
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                width: 100%;
+                gap: 2vw;
+
+                li {
+                    width: 30%;
+                }
+            }
+        }
+
+        .player-data-details {
+            display: flex;
+            flex-direction: column;
+            gap: 3vh;
+        }
+
         .card {
             width: 100%;
+            height: 100%;
+            padding: 5px;
             box-shadow: 10px 10px #3AA6B9;
-            margin: 25px 5px;
+            font-size: 1em;
             background: #135D66;
+
+            .card-title, .from-who {
+                font-weight: bold;
+            }
 
             .list-group {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-around;
-                gap: 40px;
+                gap: 20px;
                 flex-wrap: wrap;
             }
 
             .list-group-item {
                 display: flex;
                 align-items: center;
-                justify-content: center;
-                flex-direction: column;
-                gap: 5px;
+                justify-content: space-around;
+                gap: 20px;
                 background: #135D66;
                 font-size: 0.8em;
                 color: white;
@@ -95,10 +120,11 @@
         justify-content: space-between;
         gap: 25px;
 
-        .nav-tabs {
+        .types {
             display: flex;
             justify-content: center;
             gap: 20px;
+            margin: 0;
             cursor: pointer;
         }
 
@@ -108,7 +134,7 @@
 
             .select-another-player {
                 display: flex;
-                width: 45px;
+                width: 40px;
                 overflow: hidden;
 
                 &:hover {
