--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatGeneralDetails.scss
@@ -20,10 +20,14 @@
             }
         }
 
-        .player-data-details {
+        .player-general-data-details {
             display: flex;
             flex-direction: column;
             gap: 3vh;
+        }
+
+        .player-data-details {
+            margin-bottom: 60px;
         }
 
         .card {
@@ -40,10 +44,10 @@
 
             .list-group {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 justify-content: space-around;
-                gap: 20px;
                 flex-wrap: wrap;
+                gap: 20px;
             }
 
             .list-group-item {
@@ -187,6 +191,20 @@
 
 @media (max-width: $mobile-max-width)  {
     .general-details {
+        &__container {
+            .card {
+                box-shadow: none;
+            }
+
+            .details__container {
+                ul {
+                    li {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
         &__navigate {
             flex-direction: column;
             align-items: center;
