--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -138,10 +138,25 @@
 
         .another-user-container {
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            width: auto;
+            flex-wrap: wrap;
+            padding: 10px !important;
+
+            li {
+                display: flex;
+                justify-content: center;
+
+                .user {
+                    height: 40vh;
+                    width: 20vw;
+
+                    video {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
         }
     }
 }
