--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -30,6 +30,10 @@ $mobile-max-width: 425px;
         width: 100%;
         height: 100%;
 
+        &_loading {
+            width: 100%;
+        }
+
         .messages-container {
             flex-grow: 2;
 
