--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -24,10 +24,24 @@
 
                 .device-toolbar {
                     position: absolute;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
                     top: 7%;
-                    padding: 10px;
-                    border: 1px solid gray;
-                    background: black;
+                    width: 20vw;
+                    padding: 15px;
+                    box-shadow: 1px 1px 1px 1px yellow;
+                    font-size: 0.9em;
+                    border-radius: 20px;
+                    background: #0c192c;
+
+                    ul {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 5px;
+                        margin-left: 10px !important;
+                        margin: 0;
+                    }
                 }
 
                 &__screen, &__camera, &__microphone {
@@ -153,6 +167,7 @@
                     video {
                         width: 100%;
                         height: 100%;
+                        border-radius: 20px;
                     }
                 }
             }
