--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -129,10 +129,12 @@
                 height: 40vh;
                 width: 20vw;
 
-                &_video {
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 20px;
+                .media-content {
+                    video {
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 20px;
+                    }
                 }
 
                 .information {
