Add save Voice users in DB
Add save Voice users in DB: now when users connected to Voice chat will be create row in DB: it is allow show username instead of connection id

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
@@ -10,6 +10,7 @@ $mobile-max-width: 425px;
     width: 35vw;
     right: 35vw;
     padding: 10px;
+    top: 20%;
 
     .chat-name-required {
         font-size: 13px;
