--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -115,7 +115,6 @@
             gap: 20px;
             flex-basis: 30%;
             flex-grow: 1;
-            padding: 10px;
             height: 100%;
             flex-wrap: wrap;
             overflow-y: auto;
@@ -145,6 +144,18 @@
 
             .me {
                 box-shadow: 2px 2px 2px 2px green;
+            }
+        }
+
+        .sharing-content {
+            li {
+                width: 70%;
+                height: 40%;
+            }
+
+            .user {
+                height: 100%;
+                width: 100%;
             }
         }
     }
