--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
@@ -160,11 +160,31 @@ $mobile-max-width: 425px;
 }
 
 .communication-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     gap: 10px;
+
+    .creating {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+        bottom: 0;
+        opacity: 0.6;
+        background: gray;
+        border-radius: 25px;
+        box-shadow: 3px 3px 3px 3px gray;
+    }
+
+    .notify {
+        position: absolute;
+        top: -15%;
+        padding: 5px 20px;
+        box-shadow: 2px 2px 2px 2px green;
+        border: 2px solid green;
+        border-radius: 10px;
+        background: #0c192c;
+        font-weight: bold;
+    }
 
     .new-posts {
         position: fixed;
