Fix Voice chat style
Fix Voice chat style

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -125,7 +125,7 @@
                 box-shadow: 2px 2px 2px 2px gray;
                 border-radius: 20px;
                 height: 40vh;
-                width: 20vw;
+                width: 40vh;
 
                 .media-content {
                     video {
