--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -35,6 +35,7 @@
                     font-size: 0.9em;
                     border-radius: 20px;
                     background: #0c192c;
+                    z-index: 1000;
 
                     ul {
                         display: flex;
