--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -29,7 +29,7 @@ $mobile-max-width: 425px;
         .create-new-community {
             margin: 0 20px;
             font-size: 12px;
-            color: #7776B3;
+            color: yellow;
             cursor: pointer;
         }
 
