--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -17,6 +17,29 @@
             display: flex;
             gap: 20px;
 
+            .experimental-functions {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                box-shadow: 1px 1px yellow;
+                border-radius: 20px;
+                padding: 10px;
+                gap: 10px;
+                opacity: 0.7;
+
+                &__indicator {
+                    position: absolute;
+                    margin: -20px 0;
+                    font-size: 0.6em;
+                }
+
+                &__content {
+                    display: flex;
+                    justify-content: center;
+                    gap: 25px;
+                }
+            }
+
             .device {
                 display: flex;
                 justify-content: center;
